--- a/index.html
+++ b/index.html
@@ -38,29 +38,6 @@
 
 <body id="page-top">
 
-<script src="js/smart-app-banner.js"></script>
-<script type="text/javascript">
-    new SmartBanner({
-        daysHidden: 15,   // days to hide banner after close button is clicked (defaults to 15)
-        daysReminder: 90, // days to hide banner after "VIEW" button is clicked (defaults to 90)
-        appStoreLanguage: 'us', // language code for the App Store (defaults to us)
-        title: 'MyPage',
-        author: 'MyCompany LLC',
-        button: 'VIEW',
-        store: {
-            ios: 'On the App Store',
-            android: 'In Google Play',
-            windows: 'In Windows store'
-        },
-        price: {
-            ios: 'FREE',
-            android: 'FREE',
-            windows: 'FREE'
-        }
-        // , force: 'ios' // Uncomment for platform emulation
-    });
-</script>
-
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -277,14 +254,19 @@
                     <hr class="primary">
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://tw.linkedin.com/in/hillhung">LinkedIn</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <i class="fa fa-facebook-official fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://www.facebook.com/mitsw">Facebook</a></p>
                 </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://github.com/brandhill">GitHub</a></p>
+                </div>
+
             </div>
         </div>
     </section>
@@ -302,6 +284,18 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-45269364-3', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 
 </body>
 
