--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="header-content-inner">
                 <h1>Life Hacking</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -238,19 +238,11 @@
     </section>
 
     <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-            </div>
-        </div>
-    </aside>
-
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading wow tada">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
@@ -270,6 +262,7 @@
             </div>
         </div>
     </section>
+    </aside>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
