--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Hello</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <p class="text-faded">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生</p>
                 </div>
             </div>
         </div>
@@ -190,29 +189,29 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
-                        <img src="https://unsplash.it/650/350?image=533" class="img-responsive" alt="">
+                        <img src="img/accupass.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
                                 <div class="project-name">
-                                    Project Nfdjaidfsjidsaj
+                                    Accupass
+                                </div>
+                                <div class="project-category text-faded">
+                                    The leading social ticketing in asia
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://play.google.com/store/apps/details?id=com.mitsw.callulater&hl=en" target="_blank" class="portfolio-box">
                         <img src="img/call_u_later.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
                                 <div class="project-name">
                                     Call U Later
+                                </div>
+                                <div class="project-category text-faded">
+                                    Answers your calls while you can't.
                                 </div>
                             </div>
                         </div>
