--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>This is all about Hill</title>
+    <title>Life Hacking - Hill</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Hello</h2>
+                    <h2 class="section-heading">Hello, I am Hill</h2>
                     <hr class="light">
                     <p class="text-faded">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生</p>
                 </div>
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Skill</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                        <i class="fa fa-4x fa-mobile wow bounceIn text-primary"></i>
                         <h3>Sturdy Templates</h3>
                         <p class="text-muted">Our templates are updated regularly so they don't break.</p>
                     </div>
@@ -142,6 +142,58 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
+
+                <!-- CM Security -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://play.google.com/store/apps/details?id=com.cleanmaster.security&hl=en" target="_blank" class="portfolio-box">
+                        <img src="img/cmsecurity_resize.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    CM Security
+                                </div>
+                                <div class="project-category text-faded">
+                                    World's Leading Security & Optimizer App
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- HoCompass -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://shareablecities.com/hackathon-project/" target="_blank" class="portfolio-box">
+                        <img src="img/city10Hackathon.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    HoCompass
+                                </div>
+                                <div class="project-category text-faded">
+                                    3rd Award
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Accupass -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.accupass.com" target="_blank" class="portfolio-box">
+                        <img src="img/accupass.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    Accupass
+                                </div>
+                                <div class="project-category text-faded">
+                                    The leading social ticketing in asia
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://www.google.com" class="portfolio-box">
                         <img src="https://unsplash.it/650/350?image=535" class="img-responsive" alt="">
@@ -157,6 +209,7 @@
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
                         <img src="https://unsplash.it/650/350?image=534" class="img-responsive" alt="">
@@ -172,36 +225,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="https://unsplash.it/650/350?image=532" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/accupass.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    Accupass
-                                </div>
-                                <div class="project-category text-faded">
-                                    The leading social ticketing in asia
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+
+                <!-- Call U Later -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://play.google.com/store/apps/details?id=com.mitsw.callulater&hl=en" target="_blank" class="portfolio-box">
                         <img src="img/call_u_later.png" class="img-responsive" alt="">
@@ -217,21 +242,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://play.google.com/store/apps/details?id=com.cleanmaster.security&hl=en" target="_blank" class="portfolio-box">
-                        <img src="img/cmsecurity_resize.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    CM Security
-                                </div>
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+
             </div>
         </div>
     </section>
@@ -250,8 +261,8 @@
                     <p><a href="https://tw.linkedin.com/in/hillhung">LinkedIn</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-facebook-official fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="https://www.facebook.com/mitsw">Facebook</a></p>
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="mailto:brandhill.g@gmail.com">Email</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
