--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <!-- CM Security -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://play.google.com/store/apps/details?id=com.cleanmaster.security&hl=en" target="_blank" class="portfolio-box">
-                        <img src="img/cmsecurity_resize.png" class="img-responsive" alt="">
+                        <img src="img/cmsecurity.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
