--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#skill">Skill</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -96,11 +96,11 @@
         </div>
     </section>
 
-    <section id="services">
+    <section id="skill">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Skill</h2>
+                    <h2 class="section-heading">I love what I do</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -140,6 +140,7 @@
     </section>
 
     <section class="no-padding" id="portfolio">
+
         <div class="container-fluid">
             <div class="row no-gutter">
 
@@ -194,16 +195,17 @@
                     </a>
                 </div>
 
+                <!-- Mappingbird -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.google.com" class="portfolio-box">
-                        <img src="https://unsplash.it/650/350?image=535" class="img-responsive" alt="">
+                    <a href="https://www.mappingbird.com/" class="portfolio-box">
+                        <img src="img/Mappingbird.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
                                 <div class="project-name">
-                                    Project Name123
+                                    Mappingbird
+                                </div>
+                                <div class="project-category text-faded">
+                                    Remember places for later
                                 </div>
                             </div>
                         </div>
@@ -254,7 +256,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading wow tada">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>If you have any questions, requests or just want to say "Hi", please do not hesitate to send me a message.</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
