--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="header-content-inner">
                 <h1>Life Hacking</h1>
                 <hr>
-                <p>軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生</p>
+                <p>Hack 可以是種人生態度.<br>我們都試著透過各種方法尋找自己的方向,<br>在接觸新事物、解決新奇問題的時候, 一點一滴地發現自己到底喜歡什麼、想要什麼.<br>這就是 Life Hacking.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -88,6 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <div class="clip-circle"></div>
                     <h2 class="section-heading">Hello, I am Hill</h2>
                     <hr class="light">
                     <p class="text-faded">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生</p>
@@ -256,7 +257,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading wow tada">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>If you have any questions, requests or just want to say "Hi", please do not hesitate to send me a message.</p>
+                    <p>If you have any questions, requests or just want to say "Hi", <br>please do not hesitate to send me a message.</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
