--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="header-content-inner">
                 <h1>Life Hacking</h1>
                 <hr>
-                <p>Hack 可以是種人生態度.<br>我們都試著透過各種方法尋找自己的方向,<br>在接觸新事物、解決新奇問題的時候, 一點一滴地發現自己到底喜歡什麼、想要什麼.<br>這就是 Life Hacking.</p>
+                <p>Hack 可以是種人生態度.<br>我們都試著透過各種方法尋找自己的方向,<br>在接觸新事物、解決新奇問題的時候, 一點一滴地發現自己到底喜歡什麼、想要什麼,<br>這就是 Life Hacking.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -91,7 +91,7 @@
                     <div class="clip-circle"></div>
                     <h2 class="section-heading">Hello, I am Hill</h2>
                     <hr class="light">
-                    <p class="text-faded">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生</p>
+                    <p class="text-faded">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶.<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生.</p>
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
                                     HoCompass
                                 </div>
                                 <div class="project-category text-faded">
-                                    3rd Award
+                                    3rd Prize Award
                                 </div>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
 
                 <!-- Accupass -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.accupass.com" target="_blank" class="portfolio-box">
+                    <a href="https://play.google.com/store/apps/details?id=com.accuvally.android.accupass&hl=en" target="_blank" class="portfolio-box">
                         <img src="img/accupass.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -198,7 +198,7 @@
 
                 <!-- Mappingbird -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://www.mappingbird.com/" class="portfolio-box">
+                    <a href="https://www.mappingbird.com/" target="_blank" class="portfolio-box">
                         <img src="img/Mappingbird.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -207,22 +207,6 @@
                                 </div>
                                 <div class="project-category text-faded">
                                     Remember places for later
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="https://unsplash.it/650/350?image=534" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
                                 </div>
                             </div>
                         </div>
@@ -243,6 +227,15 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
+                </div>
+
+
+                <!--  -->
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box">
+                        <img src="https://unsplash.it/650/350?image=534" class="img-responsive" alt="">
+
                     </a>
                 </div>
 
