--- a/index.html
+++ b/index.html
@@ -101,8 +101,41 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".7s"></i>
                     <h2 class="section-heading">I love what I do</h2>
                     <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-android wow bounceIn text-primary"></i>
+                        <h3>Android Developer</h3>
+                        <p class="text-muted">Excellent knowledge of the Android SDK, 3rd party libraries & UI customization</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Teamwork</h3>
+                        <p class="text-muted">Ability to organise & influence people</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Highly Motivated</h3>
+                        <p class="text-muted">Expertise in software architecture optimization, refactoring and development methodology</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-mobile wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <h3>UX Matters</h3>
+                        <p class="text-muted"> Deep understanding of mobile UX and best implementation</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -141,7 +174,7 @@
                                     HoCompass
                                 </div>
                                 <div class="project-category text-faded">
-                                    3rd Prize Award
+                                    Helps people find their apartments with the best fit through open government data.
                                 </div>
                             </div>
                         </div>
@@ -175,7 +208,7 @@
                                     Mappingbird
                                 </div>
                                 <div class="project-category text-faded">
-                                    Remember places for later
+                                    A cross PC & mobile platform service which helps travelers easily organize all information from any websites or apps.
                                 </div>
                             </div>
                         </div>
