--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <link rel="stylesheet" href="css/smart-app-banner.css" type="text/css" media="screen">
 
+    <link rel="mask-icon" href="https://assets-cdn.github.com/pinned-octocat.svg" color="#4078c0">
+    <link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -91,7 +94,7 @@
                     <div class="clip-circle"></div>
                     <h2 class="section-heading">Hello, I am Hill</h2>
                     <hr class="light">
-                    <p class="text-faded">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶.<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生.</p>
+                    <p class="text-faded text-size-mid">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶.<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生.</p>
                 </div>
             </div>
         </div>
@@ -101,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".7s"></i>
+                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h2 class="section-heading">I love what I do</h2>
                     <hr class="primary">
                 </div>
@@ -111,28 +114,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-android wow bounceIn text-primary"></i>
+                        <i class="fa fa-4x fa-android wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Android Developer</h3>
                         <p class="text-muted">Excellent knowledge of the Android SDK, 3rd party libraries & UI customization</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".4s"></i>
                         <h3>Teamwork</h3>
                         <p class="text-muted">Ability to organise & influence people</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <i class="fa fa-4x fa-rocket wow bounceIn text-primary" data-wow-delay=".5s"></i>
                         <h3>Highly Motivated</h3>
                         <p class="text-muted">Expertise in software architecture optimization, refactoring and development methodology</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-mobile wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-4x fa-mobile wow bounceIn text-primary" data-wow-delay=".6s"></i>
                         <h3>UX Matters</h3>
                         <p class="text-muted"> Deep understanding of mobile UX and best implementation</p>
                     </div>
@@ -218,7 +221,7 @@
                 <!-- Call U Later -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://play.google.com/store/apps/details?id=com.mitsw.callulater&hl=en" target="_blank" class="portfolio-box">
-                        <img src="img/call_u_later.png" class="img-responsive" alt="">
+                        <img src="img/call_u_later.png" class="img-responsive" alt="Call u Later">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -233,11 +236,21 @@
                 </div>
 
 
-                <!--  -->
+                <!-- Taisys -->
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box">
-                        <img src="https://unsplash.it/650/350?image=534" class="img-responsive" alt="">
-
+                        <a href="http://www.taisys.com/p-overview?id=0751Qo1PCmTURE4r5httX4z9MLC-bCrZoBruOoI0" target="_blank" class="portfolio-box">
+                        <img src="img/Taisys.png" class="img-responsive" alt="Taisys">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    mBanking
+                                </div>
+                                <div class="project-category text-faded">
+                                    A secure, SIM-based mobile banking solution allowing complex banking transactions on the mobile device even without the use of a smart phone.
+                                </div>
+                            </div>
+                        </div>
                     </a>
                 </div>
 
