--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-android wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Android Developer</h3>
-                        <p class="text-muted">Excellent knowledge of the Android SDK, 3rd party libraries & UI customization</p>
+                        <p class="text-muted">Strong knowledge of the Android SDK, 3rd party libraries & UI customization</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -137,7 +137,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-mobile wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>UX Matters</h3>
-                        <p class="text-muted"> Deep understanding of mobile UX and best implementation</p>
+                        <p class="text-muted">Deep understanding of mobile user experience and the best implementation</p>
                     </div>
                 </div>
             </div>
