1. update font awesome 2. add medium to profile

--- a/index.html
+++ b/index.html
@@ -272,14 +272,13 @@
                     <p><a href="https://tw.linkedin.com/in/hillhung">LinkedIn</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:brandhill.g@gmail.com">Email</a></p>
-                </div>
-                <div class="col-lg-4 text-center">
                     <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="https://github.com/brandhill">GitHub</a></p>
                 </div>
-
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-medium fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://medium.com/@hillhung">Medium</a></p>
+                </div>
             </div>
         </div>
     </section>
