add MappingBird and reduce image files size

--- a/index.html
+++ b/index.html
@@ -167,6 +167,23 @@
                     </a>
                 </div>
 
+                <!-- MappingBird -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://2015.seedstarsworld.com/event/seedstars-taipei-2015/" target="_blank" class="portfolio-box">
+                        <img src="img/Mappingbird.png" class="img-responsive" alt="MappingBird">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    MappingBird
+                                </div>
+                                <div class="project-category text-faded">
+                                    Help people bookmark physical locations within 5 seconds while doing travel planning, and can view saved places on the go.
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <!-- HoCompass -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://shareablecities.com/hackathon-project/" target="_blank" class="portfolio-box">
@@ -217,24 +234,6 @@
                         </div>
                     </a>
                 </div>
-
-                <!-- Call U Later -->
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://play.google.com/store/apps/details?id=com.mitsw.callulater&hl=en" target="_blank" class="portfolio-box">
-                        <img src="img/call_u_later.png" class="img-responsive" alt="Call u Later">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    Call U Later
-                                </div>
-                                <div class="project-category text-faded">
-                                    Answers your calls while you can't.
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
 
                 <!-- Taisys -->
                 <div class="col-lg-4 col-sm-6">
