--- a/index.html
+++ b/index.html
@@ -150,6 +150,23 @@
         <div class="container-fluid">
             <div class="row no-gutter">
 
+                <!-- PhotoGrid -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.cmcm.com/en-us/photo-grid/" target="_blank" class="portfolio-box">
+                        <img src="img/PhotoGrid_Banner_small.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    PhotoGrid
+                                </div>
+                                <div class="project-category text-faded">
+                                    A Powerful Photo Editor
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <!-- CM Security -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://play.google.com/store/apps/details?id=com.cleanmaster.security&hl=en" target="_blank" class="portfolio-box">
@@ -194,7 +211,7 @@
                                     HoCompass
                                 </div>
                                 <div class="project-category text-faded">
-                                    Helps people find their apartments with the best fit through open government data.
+                                    Help people find their apartments with the best fit through open government data.
                                 </div>
                             </div>
                         </div>
@@ -212,23 +229,6 @@
                                 </div>
                                 <div class="project-category text-faded">
                                     The leading social ticketing in asia
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- CM Security for iOS -->
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://itunes.apple.com/app/cm-security-intruder-selfie/id1111447873?mt=8" target="_blank" class="portfolio-box">
-                        <img src="img/cmsecurity_ios.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    CM Security for iOS
-                                </div>
-                                <div class="project-category text-faded">
-                                    Keep users' personal photos and videos safe by locking them behind an easy-to-use PIN pad or touch ID.
                                 </div>
                             </div>
                         </div>
