--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="clip-circle"></div>
                     <h2 class="section-heading">Hello, I am Hill</h2>
                     <hr class="light">
-                    <p class="text-faded text-size-mid">軟體工程師，熱愛美食、烹飪、攝影、閱讀、爬山、以及泡茶.<br>喜歡品味新鮮事物，不斷從嘗試中學習，並期許用改變世界的熱情來面對人生.</p>
+                    <p class="text-faded text-size-mid">Hill has a real passion to build things, which continuously challenges him to experiment and learn. He's worked on a huge variety of mobile projects across UI, UX, software architecture, and many more.</p>
                 </div>
             </div>
         </div>
