use App store links for PhotoGrid

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                 <!-- PhotoGrid -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.cmcm.com/en-us/photo-grid/" target="_blank" class="portfolio-box">
+                    <a href="https://goo.gl/ZWdvXk" target="_blank" class="portfolio-box">
                         <img src="img/PhotoGrid_Banner_small.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
