--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
                     </a>
                 </div>
 
-                <!-- HoCompass -->
+                <!-- HomeCompass -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://shareablecities.com/hackathon-project/" target="_blank" class="portfolio-box">
                         <img src="img/city10Hackathon.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    HoCompass
+                                    HomeCompass
                                 </div>
                                 <div class="project-category text-faded">
                                     Help people find their apartments with the best fit through open government data.
