add Sporty.com to portfolio

--- a/index.html
+++ b/index.html
@@ -150,6 +150,23 @@
         <div class="container-fluid">
             <div class="row no-gutter">
 
+                <!-- Sporty.com -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://play.google.com/store/apps/details?id=com.sporty.android" target="_blank" class="portfolio-box">
+                        <img src="img/sporty_com.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    Sporty.com
+                                </div>
+                                <div class="project-category text-faded">
+                                    A ultimate app for sports fans. It comes with the latest sports news, football live scores, sports odds on your favorite football matches and other sports. 
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <!-- PhotoGrid -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://goo.gl/ZWdvXk" target="_blank" class="portfolio-box">
@@ -201,22 +218,6 @@
                     </a>
                 </div>
 
-                <!-- HomeCompass -->
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://shareablecities.com/hackathon-project/" target="_blank" class="portfolio-box">
-                        <img src="img/city10Hackathon.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    HomeCompass
-                                </div>
-                                <div class="project-category text-faded">
-                                    Help people find their apartments with the best fit through open government data.
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
 
                 <!-- Accupass -->
                 <div class="col-lg-4 col-sm-6">
