--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                     Sporty.com
                                 </div>
                                 <div class="project-category text-faded">
-                                    A ultimate app for sports fans. It comes with the latest sports news, football live scores, sports odds on your favorite football matches and other sports. 
+                                    An Ultimate App For The Sports Fans
                                 </div>
                             </div>
                         </div>
