udpate the link for seedstar

--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
                 </div>
 
                 <!-- MappingBird -->
+                <!-- http://2015.seedstarsworld.com/event/seedstars-taipei-2015/ -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://2015.seedstarsworld.com/event/seedstars-taipei-2015/" target="_blank" class="portfolio-box">
+                    <a href="https://www.facebook.com/SSWTaipei/photos/?tab=album&album_id=456305724542032" target="_blank" class="portfolio-box">
                         <img src="img/Mappingbird.png" class="img-responsive" alt="MappingBird">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
