--- a/index.html
+++ b/index.html
@@ -150,6 +150,23 @@
         <div class="container-fluid">
             <div class="row no-gutter">
 
+                <!-- SportyBet -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://www.sportybet.com" target="_blank" class="portfolio-box">
+                        <img src="img/sportybet.jpeg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    SprotyBet
+                                </div>
+                                <div class="project-category text-faded">
+                                    Get SportyBet, Bet SportyBet!
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <!-- Sporty.com -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://play.google.com/store/apps/details?id=com.sporty.android" target="_blank" class="portfolio-box">
@@ -186,7 +203,7 @@
 
                 <!-- CM Security -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://play.google.com/store/apps/details?id=com.cleanmaster.security&hl=en" target="_blank" class="portfolio-box">
+                    <a href="https://www.cmcm.com/en/clean-master/" target="_blank" class="portfolio-box">
                         <img src="img/cmsecurity.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -237,23 +254,6 @@
                     </a>
                 </div>
 
-                <!-- Taisys -->
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box">
-                        <a href="http://www.taisys.com/p-overview?id=0751Qo1PCmTURE4r5httX4z9MLC-bCrZoBruOoI0" target="_blank" class="portfolio-box">
-                        <img src="img/Taisys.png" class="img-responsive" alt="Taisys">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    mBanking
-                                </div>
-                                <div class="project-category text-faded">
-                                    A secure, SIM-based mobile banking solution allowing complex banking transactions on the mobile device even without the use of a smart phone.
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
 
             </div>
         </div>
