--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <i class="fa fa-4x fa-sharp fa-solid fa-heart  wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h2 class="section-heading">I love what I do</h2>
+                    <h2>I love what I do</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-mobile wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-4x fa-solid fa-compass-drafting wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>UX Matters</h3>
                         <p class="text-muted">Deep understanding of mobile user experience and the best implementation</p>
                     </div>
