--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
             <div class="header-content-inner">
                 <h1>Life Hacking</h1>
                 <hr>
-                <p>Hack 可以是種人生態度.<br>我們都試著透過各種方法尋找自己的方向,<br>在接觸新事物、解決新奇問題的時候, 一點一滴地發現自己到底喜歡什麼、想要什麼,<br>這就是 Life Hacking.</p>
+                <p>Hacking can embody a lifestyle philosophy.
+                    <br>We navigate our paths by exploring different avenues, gradually uncovering our passions and desires through engaging with the unfamiliar and tackling fresh challenges.
+                    <br>This process epitomizes Life Hacking.
+                </p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -114,9 +117,9 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa-brands fa-4x fa-android wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Android Developer</h3>
-                        <p class="text-muted">Strong knowledge of the Android SDK, 3rd party libraries & UI customization</p>
+                        <i class="fa-solid fa-4x fa-mobile wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Mobile Developer</h3>
+                        <p class="text-muted">Strong knowledge of the iOS & Android SDK, 3rd party libraries & UI customization</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -153,11 +156,11 @@
                 <!-- SportyBet -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://www.sportybet.com" target="_blank" class="portfolio-box">
-                        <img src="img/sportybet.jpeg" class="img-responsive" alt="">
+                        <img src="img/sportybet.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    SprotyBet
+                                    SportyBet
                                 </div>
                                 <div class="project-category text-faded">
                                     Get SportyBet, Bet SportyBet!
